# ASL_works

./: README.md  ROS.txt
Joystick/: Serial_arduino.ino  run_arti_vantage.yaml
Joystick/Piero-Vincenzo/: server_joy.py  server_joy_prova.py
Joystick/Piero-Vincenzo/Serial_arduino/: Serial_arduino.ino
Sound Locator/JSerial/: .project  pom.xml
Sound Locator/ProvaSerial/: build.xml
Sound Locator/ProvaSerial/Python/: prova_serial.py
Sound Locator/ProvaSerial/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
Stereo-vision/: DisplayDenseDisparityMap.py  capture_chessboard_and_calibrate_cameras.py  compute_and_store_maps.py  compute_and_store_maps_anto.py  display_disparity.py  display_disparity_dense.py  map1_x.npy  map1_y.npy  map2_x.npy  map2_y.npy  prova.py  rec_stereo_videos.py  rec_videos.py
Stereo-vision/CALIBRATION_IMAGES/: left01.ppm  left02.ppm  left03.ppm  left04.ppm  left05.ppm  left06.ppm  left07.ppm  left08.ppm  left09.ppm  left10.ppm  left11.ppm  left12.ppm  left13.ppm  left14.ppm  left15.ppm  left16.ppm  left17.ppm  left18.ppm  left19.ppm  left20.ppm  left21.ppm  left22.ppm  left23.ppm  left24.ppm  left25.ppm  left26.ppm  left27.ppm  left28.ppm  left29.ppm  left30.ppm  left31.ppm  left32.ppm  left33.ppm  left34.ppm  left35.ppm  left36.ppm  left37.ppm  left38.ppm  left39.ppm  left40.ppm  (+60 more)
Stereo-vision/CALIBRATION_OUTPUT/: dist_coefs_left.npy  f_mat.npy  proj_mats_right.npy  rectification_map_left.npy  rot_mat.npy  trans_vec.npy
Stereo-vision/Calibrazione 0.6/: map1_x.npy  map1_y.npy  map2_x.npy  map2_y.npy
Stereo-vision/Calibrazione 0.6/CALIBRATION_OUTPUT/: cam_mats_left.npy  cam_mats_right.npy  dist_coefs_right.npy  e_mat.npy  proj_mats_left.npy  rect_trans_left.npy  rect_trans_right.npy  rectification_map_right.npy  undistortion_map_left.npy  undistortion_map_right.npy  valid_boxes_left.npy  valid_boxes_right.npy
Stereo-vision/Calibrazione 0.6/calibphotos1/: left01.ppm  left02.ppm  left03.ppm  left04.ppm  left05.ppm  left06.ppm  left07.ppm  left08.ppm  left09.ppm  left10.ppm  left11.ppm  left12.ppm  left13.ppm  left14.ppm  left15.ppm  left16.ppm  left17.ppm  left18.ppm  left19.ppm  left20.ppm  left21.ppm  left22.ppm  left23.ppm  (+77 more)
image/: CMakeLists.txt  package.xml
image/src/: camera_publisher.py  camera_subscriber.py
stereo_utility/: CMakeLists.txt  README.md  package.xml
stereo_utility/calibration/: cam_left.yaml  cam_left.yml  cam_right.yaml  cam_right.yml  cam_stereo.yml  left.yaml  right.yaml
stereo_utility/include/: CameraPublisher.h  ScanMatcher.h
stereo_utility/launch/: camera_publishers.launch  stereo_vision.launch
stereo_utility/src/: camera_publisher.cpp  left_camera_publisher_node.cpp  right_camera_publisher_node.cpp  scan_matcher.cpp  scan_matcher_node.cpp
tutorial/: CMakeLists.txt  package.xml
tutorial/src/: subscriber.py
(+4 files in other folders)
